added link deploy

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>
         Platzi Video
     </title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 </head>
+<link rel="icon" href="../src/asset/static/favicon.ico" />
 
 <body>
     <div id="app">
